--- a/books.html
+++ b/books.html
@@ -35,10 +35,10 @@
 
 <table  width="1000px" height="100%" border="5" bordercolor="#000000" cellspacing="0" cellpadding="5" align="center" rules="none">
 		<tr height="210px">
-		<td class="bottom" background="http://www.jcpa.org/images/banner.jpg" valign="bottom" colspan="3">
+		<td class="bottom" background="images/banner.jpg" valign="bottom" colspan="3">
 
 
-<font color=#ffffff size="3" face="calibri"><b><a href="http://www.riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>			
+<font color=#ffffff size="3" face="calibri"><b><a href="https://riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>			
 		</td>
 	</tr>
 
@@ -51,7 +51,7 @@
 		<h2><font  face="cambria" color=#800000>Books by Dore Gold</h2> </font>
 </p>
 </p>
-<img src="images/front-cover2.jpg"  alt="" align="left" hspace="10"><font size="4" color="#000000" face="calibri"> <u><b><a href="http://www.riseofnucleariran.com/iran-book.html">The Rise of a Nuclear Iran</a></u></br></b>
+<img src="images/front-cover2.jpg"  alt="" align="left" hspace="10"><font size="4" color="#000000" face="calibri"> <u><b><a href="https://riseofnucleariran.com/iran-book.html">The Rise of a Nuclear Iran</a></u></br></b>
 <font size="3" color="#000000" face="calibri"><i>How Tehran Defies the West</i>
 </p>
 <p>
@@ -69,8 +69,8 @@ September 2009
 
 </p>
 <p>
-<img src="images/jerusalem.jpg" alt="" align="left" hspace="10"> <font size="4" color="#000000" face="calibri"><u> <a href="http://www.jcpa.org/JCPA/Templates/showpage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=1494"><b>The Fight for Jerusalem</a></u></b>
-</br> <font size="3" color="#000000" face="calibri"><i>Radical Islam, the West, and the Future of the Holy City</i></a></p>
+<img src="images/jerusalem.jpg" alt="" align="left" hspace="10"> <font size="4" color="#000000" face="calibri"><u> <b>The Fight for Jerusalem</a></u></b>
+</br> <font size="3" color="#000000" face="calibri"><i>Radical Islam, the West, and the Future of the Holy City</i></p>
 <p>
 Published by Regnery
 <br>
@@ -82,7 +82,7 @@ Hardcover<br>
 <hr width="95%" align=center>
 
 </p><p>
-<img src="images/tower-babble.jpg" alt="" align="left" hspace="10" border="1"> <font size="4" color="#000000" face="Calibri"><u><a href="http://www.jcpa.org/JCPA/Templates//ShowPage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=964"><b> Tower of Babble</font><br></u></b></a>
+<img src="images/tower-babble.jpg" alt="" align="left" hspace="10" border="1"> <font size="4" color="#000000" face="Calibri"><u><b> Tower of Babble</font><br></u></b>
 
 <font size="3" color="#000000" face="calibri"></font><i>How the United Nations Has Fueled Global Chaos</i><br><p>
 
@@ -99,7 +99,7 @@ Hardcover<br>
 <hr width="95%" align=center>
 
 
-<img src="images/hatred.jpg" alt=""hspace="10" align="left"><font size="4" color="#000000" face="calibri"><u><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=967"><b>Hatred's Kingdom</u><br></a></b>
+<img src="images/hatred.jpg" alt=""hspace="10" align="left"><font size="4" color="#000000" face="calibri"><u><b>Hatred's Kingdom</u></b><br>
 <font size="3" color="#000000" face="calibri"><i>How Saudi Arabia Supports the New Global Terrorism</i><p><p>
 Published by Regnery<br>
 2003<br>
@@ -144,7 +144,7 @@ Hardcover
 </p>
 <hr width="95%" align=center>
 <img src="images/CNN.jpg" width="200" height="122" alt="">
-<a href="http://www.riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
+<a href="https://riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
 Dore Gold on CNN</a>
 </p>
 <hr width="95%" align=center>
@@ -152,15 +152,15 @@ Dore Gold on CNN</a>
 <p>
 <img src="images/maps.jpg" width="199" height="127" alt="" border="1"></br>
 <b>Maps Portraying the Iranian Threat</b></p></font>
-<li><a href="http://www.jcpa.org/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
-<li><a href="http://www.jcpa.org/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
+<li><a href="images/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
+<li><a href="images/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
 
 <p>
 
 
 &nbsp;&nbsp;<br>
 <!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=marissyb29"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=marissyb29"></script>
+
 <!-- AddThis Button END -->
 
 
@@ -175,7 +175,7 @@ Dore Gold on CNN</a>
 		</td>
 		
 	<td class="top" bgcolor="#ffffff" colspan="3">
-			<p align="center"><font size="2" color="#000000" face="calibri"><a href="http://www.riseofnucleariran.com/">Home</a> &nbsp <a href="http://www.riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="http://www.riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp; <a href="http://www.riseofnucleariran.com/media.html"> Media </a> &nbsp;<a href="http://www.riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="http://www.riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
+			<p align="center"><font size="2" color="#000000" face="calibri"><a href="https://riseofnucleariran.com/">Home</a> &nbsp <a href="https://riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="https://riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp; <a href="https://riseofnucleariran.com/media.html"> Media </a> &nbsp;<a href="https://riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="https://riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
 
 </tr>
 	
