--- a/worldmag.html
+++ b/worldmag.html
@@ -37,10 +37,10 @@
 
 <table  width="1000px" height="100%" border="5" bordercolor="#000000" cellspacing="0" cellpadding="5" align="center" rules="none">
 		<tr height="210px">
-		<td class="bottom" background="http://www.jcpa.org/images/banner.jpg" valign="bottom" colspan="3">
+		<td class="bottom" background="images/banner.jpg" valign="bottom" colspan="3">
 
 
-<font color=#ffffff size="3" face="calibri"><b><a href="http://www.riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
+<font color=#ffffff size="3" face="calibri"><b><a href="https://riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
 		</td>
 	</tr>
 
@@ -55,26 +55,26 @@
 </p>
 by Emily Belz for Worldmag.com<br>
 
-WASHINGTON—Dore Gold has spent most of his career worrying about threats to Israel—as the former Israeli ambassador to the UN and as a senior advisor to two Israeli prime ministers, Benjamin Netanyahu and Ariel Sharon. In a private dinner with several journalists Monday he voiced his mounting concern that Israel will be alone in dealing with the Iranian nuclear threat.<br>
+WASHINGTONï¿½Dore Gold has spent most of his career worrying about threats to Israelï¿½as the former Israeli ambassador to the UN and as a senior advisor to two Israeli prime ministers, Benjamin Netanyahu and Ariel Sharon. In a private dinner with several journalists Monday he voiced his mounting concern that Israel will be alone in dealing with the Iranian nuclear threat.<br>
 
-The Obama administration, along with most European governments, has opened the door to talks with Iran without preconditions, which contrasts with the Bush administration’s policy. But Gold said both Republican and Democratic administrations have failed to seriously deal with Iran over the course of many years.<br>
-“Our biggest problem is up here,” he said, pointing to his head, “The arguments we make to ourselves for accepting this reality that is about to be imposed upon us.”<br>
+The Obama administration, along with most European governments, has opened the door to talks with Iran without preconditions, which contrasts with the Bush administrationï¿½s policy. But Gold said both Republican and Democratic administrations have failed to seriously deal with Iran over the course of many years.<br>
+ï¿½Our biggest problem is up here,ï¿½ he said, pointing to his head, ï¿½The arguments we make to ourselves for accepting this reality that is about to be imposed upon us.ï¿½<br>
 
-He can’t believe the Obama administration really expects that diplomatic engagement will quell Iran’s nuclear program: “So the question is, what’s Plan B of the West with Iran? And I suspect Plan B is no good.”<br>
+He canï¿½t believe the Obama administration really expects that diplomatic engagement will quell Iranï¿½s nuclear program: ï¿½So the question is, whatï¿½s Plan B of the West with Iran? And I suspect Plan B is no good.ï¿½<br>
 
-Having stronger deterrent nuclear power isn’t a solution like it was in the Cold War, Gold said, adding that he’s afraid that the nuclear program can be used as an “umbrella” for global Islamic terrorism. The current Israeli government, led by Netanyahu, has indicated that it is considering a preemptive military strike on Iran.<br>
+Having stronger deterrent nuclear power isnï¿½t a solution like it was in the Cold War, Gold said, adding that heï¿½s afraid that the nuclear program can be used as an ï¿½umbrellaï¿½ for global Islamic terrorism. The current Israeli government, led by Netanyahu, has indicated that it is considering a preemptive military strike on Iran.<br>
 
-“The Israeli public at least senses increasingly that Israel will have to deal with this on its own,” Gold said. “It’s a period where we’re feeling very much alone.”<br>
+ï¿½The Israeli public at least senses increasingly that Israel will have to deal with this on its own,ï¿½ Gold said. ï¿½Itï¿½s a period where weï¿½re feeling very much alone.ï¿½<br>
 
-Newly reelected Iranian President Mahmoud Ahmadinejad will travel to New York in a couple weeks to attend the UN General Assembly. The head of Iran’s Supreme National Security Council, Said Jalili, said Tuesday that the country is willing to open negotiations again over its nuclear program.<br>
+Newly reelected Iranian President Mahmoud Ahmadinejad will travel to New York in a couple weeks to attend the UN General Assembly. The head of Iranï¿½s Supreme National Security Council, Said Jalili, said Tuesday that the country is willing to open negotiations again over its nuclear program.<br>
 
 Gold said this means little, referring to the Shiite doctrine of taqiyya, where one can lie outwardly as long as he believes what is true in his heart. He added that a Shiite government opening new rounds of negotiations would be simply an outward gesture that Iranian leaders can exploit to continue their nuclear ambitions.<br>
 
-“For the Iranians, strategic deception is a key portion of their approach to diplomacy,” Gold said. “It will be a disaster. It will be an utter disaster.”
-He pointed to evidence that Ahmadinejad’s belief in a certain doctrine regarding the end of days explains some of his actions. According to Gold, the Iranian leader believes that one day a ninth-century imam, Muhammad al-Mahdi al-Hujjah, will have a messianic return. But Ahmadinejad and his senior advisers also believe that the return of this “hidden imam” can be sped by “the creation of global chaos,” Gold said.
-International reports on Iran’s nuclear program indicate that it could produce an atomic bomb in two years, but U.S. and Israeli reports have indicated that a bomb could be built, in the worst-case scenario, within a year, though that is unlikely.<br>
+ï¿½For the Iranians, strategic deception is a key portion of their approach to diplomacy,ï¿½ Gold said. ï¿½It will be a disaster. It will be an utter disaster.ï¿½
+He pointed to evidence that Ahmadinejadï¿½s belief in a certain doctrine regarding the end of days explains some of his actions. According to Gold, the Iranian leader believes that one day a ninth-century imam, Muhammad al-Mahdi al-Hujjah, will have a messianic return. But Ahmadinejad and his senior advisers also believe that the return of this ï¿½hidden imamï¿½ can be sped by ï¿½the creation of global chaos,ï¿½ Gold said.
+International reports on Iranï¿½s nuclear program indicate that it could produce an atomic bomb in two years, but U.S. and Israeli reports have indicated that a bomb could be built, in the worst-case scenario, within a year, though that is unlikely.<br>
 
-“Everyone’s very complacent,” Gold said.<br><p>
+ï¿½Everyoneï¿½s very complacent,ï¿½ Gold said.<br><p>
 
 
 http://www.worldmag.com/webextra/15840
@@ -114,15 +114,15 @@ http://www.worldmag.com/webextra/15840
 <p>
 <img src="images/maps.jpg" width="199" height="127" alt="" border="1"></br>
 <b>Maps Portraying the Iranian Threat</b></p></font>
-<li><a href="http://www.jcpa.org/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
-<li><a href="http://www.jcpa.org/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
+<li><a href="images/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
+<li><a href="images/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
 
 <p>
 
 
 &nbsp;&nbsp;<br>
 <!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=marissyb29"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=marissyb29"></script>
+
 <!-- AddThis Button END -->
 
 
@@ -134,7 +134,7 @@ http://www.worldmag.com/webextra/15840
 		</td>
 		
 	<td class="top" bgcolor="#ffffff" colspan="3">
-			<p align="center"><font size="2" color="#000000" face="calibri"><a href="http://www.riseofnucleariran.com/">Home</a> &nbsp; &nbsp &nbsp <a href="http://www.riseofnucleariran.com/books.html">Bookshelf</a>&nbsp &nbsp &nbsp <a href="http://www.riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp &nbsp &nbsp <a href="http://www.riseofnucleariran.com/media.html"> Media </a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
+			<p align="center"><font size="2" color="#000000" face="calibri"><a href="https://riseofnucleariran.com/">Home</a> &nbsp; &nbsp &nbsp <a href="https://riseofnucleariran.com/books.html">Bookshelf</a>&nbsp &nbsp &nbsp <a href="https://riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp &nbsp &nbsp <a href="https://riseofnucleariran.com/media.html"> Media </a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
 
 </tr>
 	
