--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
 
 <table  width="1000px" height="100%" border="5" bordercolor="#000000" cellspacing="0" cellpadding="5" align="center" rules="none">
 		<tr height="210px">
-		<td class="bottom" background="http://www.jcpa.org/images/banner.jpg" valign="bottom" colspan="3">
+		<td class="bottom" background="images/banner.jpg" valign="bottom" colspan="3">
 
 
-<font color=#ffffff size="3" face="calibri"><b><a href="http://www.riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
+<font color=#ffffff size="3" face="calibri"><b><a href="https://riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
 		</td>
 	</tr>
 
@@ -53,7 +53,7 @@
 	<h2><font  face="cambria" color=#bf3019>About Dore Gold</h2> </font>
 </p>
 </p>
-<img src="http://www.jcpa.org/images/dore-gold1.jpg" alt="" align="right" border="1" hspace="15" vpsace="10"><font size="3" color="#000000" face="cambria"><a href="http://www.dore-gold.com">Ambassador Dore Gold</a> is President of the Jerusalem Center for Public Affairs. He was the eleventh Permanent Representative of Israel to the United Nations (1997-1999). Previously he served as Foreign Policy Advisor to the former Prime Minister of Israel, Benjamin Netanyahu. He has served as an advisor to Prime Minister Ariel Sharon, who asked him to accompany his entourage to Washington and the 2003 Aqaba Summit with President George W. Bush. <br>
+<img src="images/dore-gold1.jpg" alt="" align="right" border="1" hspace="15" vpsace="10"><font size="3" color="#000000" face="cambria">Ambassador Dore Gold is President of the Jerusalem Center for Public Affairs. He was the eleventh Permanent Representative of Israel to the United Nations (1997-1999). Previously he served as Foreign Policy Advisor to the former Prime Minister of Israel, Benjamin Netanyahu. He has served as an advisor to Prime Minister Ariel Sharon, who asked him to accompany his entourage to Washington and the 2003 Aqaba Summit with President George W. Bush. <br>
 <p>
 
 
@@ -61,36 +61,36 @@ Ambassador Gold was a member of the Israeli delegation at the 1998 Wye River neg
 <p>
 
  
-Ambassador Gold has written numerous books and articles on the Middle East, including U.S. Military Strategy in the Middle East (Tel Aviv: Ministry of Defense Publications, 1993), <a href="http://www.jcpa.org/JCPA/Templates/showpage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=967"> <font color=#000080>Hatred's Kingdom: How Saudi Arabia Supports the New Global Terrorism (Washington: Regnery, 2003), <a href="http://www.jcpa.org/JCPA/Templates//ShowPage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=964"><font color=#000080>Tower of Babble: How the United Nations Has Fueled Global Chaos (NY: Crown Forum, 2004),</a> <a href="http://www.jcpa.org/JCPA/Templates/showpage.asp?DBID=1&LNGID=1&TMID=103&FID=448&PID=0&IID=1494"> <font color=#000080>The Fight for Jerusalem: Radical Islam, the West, and the Future of the Holy City (Regnery, 2007)</a> <font color="000000">and <a href="http://www.riseofnucleariran.com/iran-book.html"><font color=#000080>The Rise of Nuclear Iran: How Tehran Defies the West </a> <font color="000000"> (Regnery, 2009). His articles have appeared in Asahi Shinbun, Commentary, Daily Telegraph, Die Zeit, Ha'aretz, Jerusalem Post, New York Times, Washington Post, and Wall Street Journal. He lives in Jerusalem with his wife, Ofra, and their two children.</font>
+Ambassador Gold has written numerous books and articles on the Middle East, including U.S. Military Strategy in the Middle East (Tel Aviv: Ministry of Defense Publications, 1993),  <font color=#000080>Hatred's Kingdom: How Saudi Arabia Supports the New Global Terrorism (Washington: Regnery, 2003), <font color=#000080>Tower of Babble: How the United Nations Has Fueled Global Chaos (NY: Crown Forum, 2004),  <font color=#000080>The Fight for Jerusalem: Radical Islam, the West, and the Future of the Holy City (Regnery, 2007) <font color="000000">and <a href="https://riseofnucleariran.com/iran-book.html"><font color=#000080>The Rise of Nuclear Iran: How Tehran Defies the West </a> <font color="000000"> (Regnery, 2009). His articles have appeared in Asahi Shinbun, Commentary, Daily Telegraph, Die Zeit, Ha'aretz, Jerusalem Post, New York Times, Washington Post, and Wall Street Journal. He lives in Jerusalem with his wife, Ofra, and their two children.</font>
 <p>
 
 
 
 &nbsp;&nbsp; <br>
 <h2><font  face="cambria" color=#bf3019> Additional Publications by Dore Gold<br></font></h2>
-<font face="cambria" color=000000> <li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=376&PID=0&IID=2995"><font color=#000080>U.S. Policy on Israeli Settlements</a><br></font>
+<font face="cambria" color=000000> <li><font color=#000080>U.S. Policy on Israeli Settlements<br></font>
 
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2985"> <font color=#000080>Israel's Forgotten Rights in Jerusalem (Haaretz)</a><br>
+<li> <font color=#000080>Israel's Forgotten Rights in Jerusalem (Haaretz)<br>
 
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2982"> <font color=#000080>The Struggle for Jerusalem</a><br>
+<li> <font color=#000080>The Struggle for Jerusalem<br>
 
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2881"> <font color=#000080>Letter to the Editor: Defending the Golan Heights (Foreign Affairs)</a><br>
+<li> <font color=#000080>Letter to the Editor: Defending the Golan Heights (Foreign Affairs)<br>
 
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2827"> <font color=#000080>The Gaza-Egypt Smuggling Tunnels Must be Closed (Wall Street Journal)</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=378&PID=0&IID=2808"> <font color=#000080>Did Israel Use "Disproportionate Force" In Gaza?  </a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2803"><font color=#000080>Banging Square Pegs into Round Holes (Washington Institute for Near East Policy)</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=2185"> <font color=#000080>The Only Goal (Columbia Magazine) </a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=283&PID=0&IID=2207"> <font color=#000080>The Golan Heights and the Syrian-Israeli Negotiations</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=283&PID=0&IID=2049"> <font color=#000080>Israel’s War to Halt Palestinian Rocket Attacks</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=376&PID=0&IID=1942"><font color=#000080>Towards Annapolis: Is U.S. Policy Changing on Israel’s Rights in a Peace Settlement?</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=582&PID=0&IID=1878"><font color=#000080>Where is the Issue of Education for Peace in the Olmert-Rice-Abbas Initiative?</a></br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=376&PID=0&IID=1795"> <font color=#000080>Understanding the U.S.-Israel Alliance: An Israeli Response to the Walt-Mearsheimer Claim</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=573&PID=0&IID=1756"><font color=#000080>The Dangers of 'Peace' Making (The Wall Street Journal) </a><br>
-<li><a href="http://www.jcpa.org/text/henryjacksonsocietyinterview.pdf"><font color=#000080>A Conversation between Ambassador Dore Gold and Barak M. Seener</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=380&PID=0&IID=1547"><font color=#000080>The Failure of the Riyadh Summit</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=379&PID=0&IID=1491"><font color=#000080>Iran, Hizbullah, Hamas and the Global Jihad: A New Conflict Paradigm for the West - Executive Summary</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=380&PID=0&IID=1384"><font color=#000080>The Iraq Study Group: Implications for Israel</a><br>
-<li><a href="http://www.jcpa.org/JCPA/Templates/ShowPage.asp?DBID=1&TMID=111&LNGID=1&FID=283&PID=0&IID=522"><font color=#000080>After the Hamas Victory: The Increasing Importance of Israel's Strategic Barrier in the Jordan Valley</a><br>
+<li> <font color=#000080>The Gaza-Egypt Smuggling Tunnels Must be Closed (Wall Street Journal)<br>
+<li> <font color=#000080>Did Israel Use "Disproportionate Force" In Gaza?  <br>
+<li><font color=#000080>Banging Square Pegs into Round Holes (Washington Institute for Near East Policy)<br>
+<li> <font color=#000080>The Only Goal (Columbia Magazine) <br>
+<li> <font color=#000080>The Golan Heights and the Syrian-Israeli Negotiations<br>
+<li> <font color=#000080>Israel's War to Halt Palestinian Rocket Attacks<br>
+<li><font color=#000080>Towards Annapolis: Is U.S. Policy Changing on Israelï¿½s Rights in a Peace Settlement?<br>
+<li><font color=#000080>Where is the Issue of Education for Peace in the Olmert-Rice-Abbas Initiative?</br>
+<li> <font color=#000080>Understanding the U.S.-Israel Alliance: An Israeli Response to the Walt-Mearsheimer Claim<br>
+<li><font color=#000080>The Dangers of 'Peace' Making (The Wall Street Journal) <br>
+<li><a href="images/henryjacksonsocietyinterview.pdf"><font color=#000080>A Conversation between Ambassador Dore Gold and Barak M. Seener</a><br>
+<li><font color=#000080>The Failure of the Riyadh Summit<br>
+<li><font color=#000080>Iran, Hizbullah, Hamas and the Global Jihad: A New Conflict Paradigm for the West - Executive Summary<br>
+<li><font color=#000080>The Iraq Study Group: Implications for Israel<br>
+<li><font color=#000080>After the Hamas Victory: The Increasing Importance of Israel's Strategic Barrier in the Jordan Valley<br>
 &nbsp;&nbsp;<br>
 &nbsp;&nbsp;<br>&nbsp;&nbsp; <br>
 &nbsp;&nbsp;<br>
@@ -125,7 +125,7 @@ Ambassador Gold has written numerous books and articles on the Middle East, incl
 
 <p>
 	<img src="images/CNN.jpg" width="200" height="122" alt="">
-<a href="http://www.riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
+<a href="https://riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
 Dore Gold on CNN</a>
 </p>
 <hr width="95%" align=center>
@@ -138,8 +138,8 @@ Dore Gold on CNN</a>
 <p>
 <img src="images/maps.jpg" width="199" height="127" alt="" border="1"></br>
 <b>Maps Portraying the Iranian Threat</b></p></font>
-<li><a href="http://www.jcpa.org/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
-<li><a href="http://www.jcpa.org/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
+<li><a href="images/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
+<li><a href="images/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
 
 <p>
 
@@ -147,7 +147,7 @@ Dore Gold on CNN</a>
 &nbsp;&nbsp;<br>
 
 <!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=marissyb29"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=marissyb29"></script>
+
 <!-- AddThis Button END -->
 		</td>
 
@@ -157,7 +157,7 @@ Dore Gold on CNN</a>
 		</td>
 		
 	<td class="top" bgcolor="#ffffff" colspan="3">
-			<p align="center"><font size="2" color="#000000" face="calibri"><a href="http://www.riseofnucleariran.com/">Home</a> &nbsp; &nbsp &nbsp <a href="http://www.riseofnucleariran.com/books.html">Bookshelf</a>&nbsp &nbsp &nbsp <a href="http://www.riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp &nbsp &nbsp <a href="http://www.riseofnucleariran.com/media.html">Media</a> &nbsp &nbsp &nbsp<a href="http://www.riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
+			<p align="center"><font size="2" color="#000000" face="calibri"><a href="https://riseofnucleariran.com/">Home</a> &nbsp; &nbsp &nbsp <a href="https://riseofnucleariran.com/books.html">Bookshelf</a>&nbsp &nbsp &nbsp <a href="https://riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp &nbsp &nbsp <a href="https://riseofnucleariran.com/media.html">Media</a> &nbsp &nbsp &nbsp<a href="https://riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
 
 </tr>
 	
