--- a/images/index.html
+++ b/images/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="iran, nuclear threat, dore gold, ahmadinejad, terrorism">
 <meta name="description" content="The official website of Dore Gold's new book the Rise of Nuclear Iran on the subject of the Iranian nuclear threat and their connection to global terrorist organizations.">
 <meta name="author" content="Dore Gold">
-<link rel="shortcut icon" href="http://www.jcpa.org/images/myicon.ico">
+<link rel="shortcut icon" href="images/myicon.ico">
 <style type="text/css">
 div.feedburnerFeedBlock ul li span.headline {
 font-weight:bold;
@@ -48,10 +48,10 @@ list-style-type: none
 <table  width="1000px" height="100%" border="5" bordercolor="#000000" cellspacing="0" cellpadding="5" align="center" rules="none">
 
 		<tr height="210px">
-		<td class="bottom" background="http://www.jcpa.org/images/banner.jpg" valign="bottom" colspan="3">
+		<td class="bottom" background="images/banner.jpg" valign="bottom" colspan="3">
 
 
-<font color=#ffffff size="3" face="calibri"><b><a href="http://www.riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
+<font color=#ffffff size="3" face="calibri"><b><a href="https://riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>		
 		</td>
 	</tr>
 		<td class="right" bgcolor="#ffffff" colspan="2" valign="top">
@@ -63,7 +63,7 @@ list-style-type: none
 </blockquote></b></center>
 <font size="4" color="#ba3825" face="cambria"><b>The Rise of Nuclear Iran </b><font color="000000" size="3">is a global threat that is being underestimated. The immediate consequence of Iran crossing the nuclear threshold will be the advent of a nuclear umbrella over the international terrorist forces to which Tehran gives sanctuary and support.
 
-Emboldened by this new protection, pro-Iranian groups, like Hizbullah, that are today already positioned in Latin America, Central Europe, and in the oil-rich Persian Gulf, will be able to strike with a sense of impunity that al-Qaeda could only dream of back on 9/11. <a href="http://www.riseofnucleariran.com/iran-book.html">Read more about the nuclear threat...</a></br>
+Emboldened by this new protection, pro-Iranian groups, like Hizbullah, that are today already positioned in Latin America, Central Europe, and in the oil-rich Persian Gulf, will be able to strike with a sense of impunity that al-Qaeda could only dream of back on 9/11. <a href="https://riseofnucleariran.com/iran-book.html">Read more about the nuclear threat...</a></br>
 </p>&nbsp;
 </p>
 <hr width="95%" align=center>
@@ -85,7 +85,6 @@ The Continuing Projection of Iranian Power and Western Policy Options:<br>
 
 Latest Developments and Analyses
 </font></b></center>
-		<font size="3" color="#000000" face="Cambria"><script src="http://feeds.feedburner.com/UpdatesOnIran?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/UpdatesOnIran"></a><br/>Powered by FeedBurner</p> </noscript></br>
 
 <hr width="95%" align=center>
 
@@ -112,14 +111,14 @@ Latest Developments and Analyses
 
 <p>
 <img src="images/CNN.jpg" width="200" height="122" alt="">
-<a href="http://www.riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
+<a href="https://riseofnucleariran.com/CNN.html"><center><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
 Dore Gold on CNN</a>
 </p>
 <hr width="95%" align=center>
 <p>
 
 <img src="images/dore-heritage.jpg" width="200" height="122" alt="">
-<a href="http://www.riseofnucleariran.com/heritage.html"><center><b><font face="cambria" color="#ba3825">Dore Gold at the Heritage Foundation on Sept. 1<br>
+<a href="https://riseofnucleariran.com/heritage.html"><center><b><font face="cambria" color="#ba3825">Dore Gold at the Heritage Foundation on Sept. 1<br>
 </a>
 </p>
 <hr width="95%" align=center>
@@ -139,7 +138,7 @@ Dore Gold on CNN</a>
 &nbsp;&nbsp;&nbsp;&nbsp;<font color="#ba3825">-Amir Taheri</font>, author of <i>The Persian Night</i>, and former editor of <i>Kayhan</i>, is also a frequent contributor to the <i>New York Post</i>,<i>Wall Street Journal</i>, and other publications</font>
 <br>
 </p>
-<font size="3" color="#000000" face="cambria"> "Dore Gold’s The Rise of Nuclear Iran -- How Tehran Defies the West provides a dire warning: Despite the current problems raging in the Middle East, the worst may have yet to come. The Islamic Revolution that started in Tehran in 1979 has given birth to “an octopus” with tentacles that have grown to stretch far beyond Iran’s borders."<br>
+<font size="3" color="#000000" face="cambria"> "Dore Goldï¿½s The Rise of Nuclear Iran -- How Tehran Defies the West provides a dire warning: Despite the current problems raging in the Middle East, the worst may have yet to come. The Islamic Revolution that started in Tehran in 1979 has given birth to ï¿½an octopusï¿½ with tentacles that have grown to stretch far beyond Iranï¿½s borders."<br>
 &nbsp;&nbsp;&nbsp;&nbsp;<font color="#ba3825">-James Zumwalt</font>, HumanEvents.com 
 <p>
 
@@ -148,15 +147,15 @@ Dore Gold on CNN</a>
 		<td class="left bottom right" bgcolor="#ebdfc2" valign="top">
 <img src="images/maps.jpg" width="199" height="127" alt="" border="1"></br>
 <b><font face="cambria" color="#ba3825"><center>Maps Portraying the Iranian Threat</b></p></font>
-<li><a href="http://www.jcpa.org/text/iran-book-map2.pdf"><font face="cambria" color=#000080>Iranian Political-Military Involvement</a>
-<li><a href="http://www.jcpa.org/text/iran-book-map4.pdf"><font face="cambria" color=#000080>Iran's Growing Missile Capabilities</a></li>
+<li><a href="images/text/iran-book-map2.pdf"><font face="cambria" color=#000080>Iranian Political-Military Involvement</a>
+<li><a href="images/text/iran-book-map4.pdf"><font face="cambria" color=#000080>Iran's Growing Missile Capabilities</a></li>
 
 <p>
 
 
 &nbsp;&nbsp;<br>
 <!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=marissyb29"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=marissyb29"></script>
+
 <!-- AddThis Button END -->			
 		</td>
 			
@@ -166,7 +165,7 @@ Dore Gold on CNN</a>
 		
 	<td class=top colspan="3" bgcolor="#ffffff" height=20px>
 
-				<p align="center"><font size="2" color="#000000" face="calibri"><a href="http://www.riseofnucleariran.com/">Home</a> &nbsp <a href="http://www.riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="http://www.riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp <a href="http://www.riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="http://www.riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
+				<p align="center"><font size="2" color="#000000" face="calibri"><a href="https://riseofnucleariran.com/">Home</a> &nbsp <a href="https://riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="https://riseofnucleariran.com/about.html">About Dore Gold </a> &nbsp <a href="https://riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="https://riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
 
  </td> 
 </tr>
