--- a/media.html
+++ b/media.html
@@ -59,10 +59,10 @@ margin:12px 0 0 0;
 
 <table  width="1000px" height="100%" border="5" bordercolor="#000000" cellspacing="0" cellpadding="5" align="center" rules="none">
 		<tr height="210px">
-		<td class="bottom" background="http://www.jcpa.org/images/banner.jpg" valign="bottom" colspan="3">
+		<td class="bottom" background="images/banner.jpg" valign="bottom" colspan="3">
 
 
-<font color=#ffffff size="3" face="calibri"><b><a href="http://www.riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="http://www.riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>					
+<font color=#ffffff size="3" face="calibri"><b><a href="https://riseofnucleariran.com/"><font color=#ffffff></u>Home</a> &nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/about.html"><font color=#ffffff></u>About Dore Gold</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/books.html"><font color=#ffffff></u>Bookshelf</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/media.html"><font color=#ffffff></u>Media</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/iran.html"><font color=#ffffff></u>Updates on Iran</a>&nbsp;&nbsp;&nbsp;<a href="https://riseofnucleariran.com/reading.html"><font color=#ffffff></u>Further Reading</a>&nbsp;&nbsp;&nbsp;<a href="http://www.jcpa.org"><font color=#ffffff></u>Jerusalem Center for Public Affairs </a></font>					
 		</td>
 	</tr>
 
@@ -84,13 +84,13 @@ margin:12px 0 0 0;
 <hr width="95%" align=center>
 
 <img src="images/dore-heritage.jpg" width="140" height="161" alt="" align="center" border="1">
-<a href="http://www.riseofnucleariran.com/heritage.html"><b><font face="cambria" color="#ba3825">Dore Gold at the Heritage Foundation on Sept. 1<br><p><p>
+<a href="https://riseofnucleariran.com/heritage.html"><b><font face="cambria" color="#ba3825">Dore Gold at the Heritage Foundation on Sept. 1<br><p><p>
 
 
 
 <hr width="95%" align=center><br>
 <img src="images/CNN.jpg" width="200" height="122" alt="" align="center"border="1">
-<a href="http://www.riseofnucleariran.com/CNN.html"><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
+<a href="https://riseofnucleariran.com/CNN.html"><b><font face="cambria" color="#ba3825">Israel Weighs Iranian Threat<br>
 Dore Gold on CNN</a>
 </p>
 <hr width="95%" align=center>
@@ -99,7 +99,7 @@ Dore Gold on CNN</a>
 </p>
 <hr width="95%" align=center><br>
 <img src="images/newsmax.tv.jpg" width="210" height="151" alt="" align="center"border="1">
-<a href="http://www.riseofnucleariran.com/newsmax.html"><b><font face="cambria" color="#ba3825">A Nuclear Iran is the World's Biggest Threat<br>
+<a href="https://riseofnucleariran.com/newsmax.html"><b><font face="cambria" color="#ba3825">A Nuclear Iran is the World's Biggest Threat<br>
 Dore Gold on Newsmax.TV</a><p>
 
 <hr width="95%" align=center>
@@ -111,8 +111,8 @@ Dore Gold on Newsmax.TV</a><p>
 <hr width="95%" align=center>
 <h2>Interviews</h2>
 <a href="http://www.jewishpolicycenter.org/1525/rise-of-nuclear-iran"> The Jewish Policy Center </a></br>
-<a href="http://www.riseofnucleariran.com/worldmag.html">Feeling Alone - World Mag</a><br>
-<a href="http://www.riseofnucleariran.com/humanevents.html">Gold Says UN Working with Iran to Hide Nuclear Program - Human Events </a><br><p>
+<a href="https://riseofnucleariran.com/worldmag.html">Feeling Alone - World Mag</a><br>
+<a href="https://riseofnucleariran.com/humanevents.html">Gold Says UN Working with Iran to Hide Nuclear Program - Human Events </a><br><p>
 
 &nbsp;<p>
 
@@ -144,15 +144,15 @@ Dore Gold on Newsmax.TV</a><p>
 <p><p>
 <img src="images/maps.jpg" width="199" height="127" alt="" border="1"></br>
 <b>Maps Portraying the Iranian Threat</b></p></font>
-<li><a href="http://www.jcpa.org/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
-<li><a href="http://www.jcpa.org/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
+<li><a href="images/text/iran-book-map2.pdf"><font color=#000080>Iranian Political-Military Involvement</a>
+<li><a href="images/text/iran-book-map4.pdf"><font color=#000080>Iran's Growing Missile Capabilities</a></li>
 
 <p>
 
 
 &nbsp;&nbsp;<br>
 <p><!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=marissyb29"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=marissyb29"></script>
+
 <!-- AddThis Button END -->
 
 
@@ -167,7 +167,7 @@ Dore Gold on Newsmax.TV</a><p>
 		</td>
 		
 	<td class="top" bgcolor="#ffffff" colspan="3">
-				<p align="center"><font size="2" color="#000000" face="calibri"><a href="http://www.riseofnucleariran.com/">Home</a> &nbsp <a href="http://www.riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="http://www.riseofnucleariran.com/about.html">About Dore Gold</a> &nbsp <a href="http://www.riseofnucleariran.com/media.html"> Media </a>&nbsp;<a href="http://www.riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="http://www.riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
+				<p align="center"><font size="2" color="#000000" face="calibri"><a href="https://riseofnucleariran.com/">Home</a> &nbsp <a href="https://riseofnucleariran.com/books.html">Bookshelf</a> &nbsp <a href="https://riseofnucleariran.com/about.html">About Dore Gold</a> &nbsp <a href="https://riseofnucleariran.com/media.html"> Media </a>&nbsp;<a href="https://riseofnucleariran.com/iran.html">Updates on Iran</a> &nbsp;<a href="https://riseofnucleariran.com/reading.html">Further Reading</a>&nbsp;&nbsp;<a href="http://www.jcpa.org">Jerusalem Center</font></a>
 
 </tr>
 	
